individual pokemon page initial layout. Some routing

--- a/frontend/src/assets/_variables.scss
+++ b/frontend/src/assets/_variables.scss
@@ -1,4 +1,6 @@
 $base-green: #71c1a1;
 $base-gray: #eeeeee;
+$base-purple: #9f9fff;
 $interactable-size: 0.5rem;
-$medium-screen: 680px; // 680
+$medium-screen: 680px;
+$small-screen: 480px;
